--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
             #     command: npm run test --prod
             # - run:
             #     name: Building
-            - checkout
+            # - checkout
             #     command: npm run build:ssr
     deploy:
         working_directory: ~/project
@@ -49,7 +49,7 @@ jobs:
                 command: sudo npm install -g @angular/cli@7.3.9
             - run:
                 name: Building
-                command: npm run build deploy
+                command: npm run deploy
             - run:
                 name: Deploy Master to Github pages
                 command: ngh dir "./dist/browser" --token "$GITHUB_TOKEN"
