--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "bundle-report": "ng build --prod --stats-json && webpack-bundle-analyzer dist/stats.json",
     "deploy": "ng build --prod --base-href 'https://ezzabuzaid.github.io/angular-buildozer/'"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint:ts",
+      "pre-push": "npm run build:ssr"
+    }
+  },
   "dependencies": {
     "@angular/animations": "~8.0.0",
     "@angular/cdk": "^8.0.0",
@@ -58,10 +64,22 @@
     "@angular/cli": "~8.0.1",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
-    "@types/node": "~8.9.4",
+    "@angularclass/hmr": "^2.1.3",
+    "@biesbjerg/ngx-translate-extract": "^2.3.4",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "@speedy/build-angular": "^0.1.2",
+    "@types/ftp": "^0.3.29",
+    "@types/googlemaps": "^3.36.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "@types/stylelint": "^9.10.0",
     "codelyzer": "^5.0.0",
+    "commander": "^2.19.0",
+    "ftp": "^0.3.10",
+    "gulp": "^4.0.0",
+    "gulp-remove-logging": "^1.2.0",
+    "husky": "^2.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -69,24 +87,15 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "mock-browser": "^0.92.14",
     "protractor": "~5.4.0",
+    "stylelint": "^10.1.0",
     "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3",
-    "webpack-cli": "^3.1.0",
-    "@angularclass/hmr": "^2.1.3",
-    "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "@types/ftp": "^0.3.29",
-    "@types/googlemaps": "^3.36.0",
-    "commander": "^2.19.0",
-    "ftp": "^0.3.10",
-    "gulp": "^4.0.0",
-    "gulp-remove-logging": "^1.2.0",
-    "husky": "^2.1.0",
-    "mock-browser": "^0.92.14",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.1.0"
   },
   "name": "angular-buildozer",
   "version": "0.0.0",
@@ -104,11 +113,6 @@
     "name": "ezzabuzaid",
     "email": "ezzabuzaid@hotmail.com",
     "url": "https://ezzabuzaid.com"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint:ts"
-    }
   },
   "repository": "github:ezzabuzaid/angular-buildozer",
   "private": true
