--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@angular/router": "~8.0.0",
     "@angular/service-worker": "~8.0.0",
     "@auth0/angular-jwt": "^2.1.0",
+    "@microsoft/microsoft-graph-client": "^1.7.0",
+    "@microsoft/teams-js": "^1.4.3",
     "@nguniversal/express-engine": "^7.0.2",
     "@nguniversal/module-map-ngfactory-loader": "v7.0.2",
     "@ngx-translate/core": "^11.0.1",
@@ -66,6 +68,7 @@
     "@angular/language-service": "~8.0.0",
     "@angularclass/hmr": "^2.1.3",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
+    "@microsoft/microsoft-graph-types": "^1.9.0",
     "@ngx-translate/http-loader": "^4.0.0",
     "@speedy/build-angular": "^0.1.2",
     "@types/ftp": "^0.3.29",
