--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,16 +22,6 @@ jobs:
                 key: npm-dependencies-{{ checksum "package.json" }}
                 paths:
                     - node_modules
-            # - run:
-            #     name: Linting
-            #     command: npm run lint
-            # - run:
-            #     name: Testing
-            #     command: npm run test --prod
-            # - run:
-            #     name: Building
-            # - checkout
-            #     command: npm run build:ssr
     deploy:
         working_directory: ~/project
         docker:
@@ -41,12 +31,16 @@ jobs:
             - run:
                 name: Show current branch
                 command: echo ${CIRCLE_BRANCH}
+            - restore_cache:
+                keys:
+                    - npm-dependencies-{{ checksum "package.json" }}
             - run:
                 name: Install angular cli github pages
                 command: sudo npm install -g angular-cli-ghpages
             - run:
                 name: Install angular cli
                 command: sudo npm install -g @angular/cli@7.3.9
+            - run: sudo npm install @angular-devkit/build-angular
             - run:
                 name: Building
                 command: npm run deploy
