--- a/package.json
+++ b/package.json
@@ -16,12 +16,6 @@
     "bundle-report": "ng build --prod --stats-json && webpack-bundle-analyzer dist/stats.json",
     "deploy": "ng build --prod --base-href 'https://ezzabuzaid.github.io/angular-buildozer/'"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint:ts",
-      "pre-push": "npm run build:ssr"
-    }
-  },
   "dependencies": {
     "@angular/animations": "~8.0.0",
     "@angular/cdk": "^8.0.0",
@@ -75,7 +69,7 @@
     "@types/googlemaps": "^3.36.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "@types/stylelint": "^9.10.0",
     "codelyzer": "^5.0.0",
     "commander": "^2.19.0",
@@ -100,6 +94,12 @@
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.1.0"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint:ts",
+      "pre-push": "npm run build:ssr"
+    }
+  },
   "name": "angular-buildozer",
   "bugs": {
     "email": "ezzabuzaid@hotmail.com",
@@ -122,5 +122,9 @@
     "url": "https://ezzabuzaid.com"
   },
   "repository": "github:ezzabuzaid/angular-buildozer",
-  "private": true
+  "private": true,
+  "license": "MIT",
+  "engines": {
+    "node": "8.11.1"
+  }
 }
