--- a/package.json
+++ b/package.json
@@ -22,67 +22,58 @@
     "release:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "dependencies": {
-    "@angular/animations": "~8.0.0",
-    "@angular/cdk": "^8.0.0",
-    "@angular/common": "~8.0.0",
-    "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
-    "@angular/fire": "^5.1.3",
-    "@angular/forms": "~8.0.0",
-    "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "~8.0.0",
-    "@angular/platform-browser-dynamic": "~8.0.0",
-    "@angular/platform-server": "~8.0.0",
-    "@angular/pwa": "^0.800.1",
-    "@angular/router": "~8.0.0",
-    "@angular/service-worker": "~8.0.0",
-    "@auth0/angular-jwt": "^2.1.0",
-    "@kolkov/angular-editor": "^0.14.6",
-    "@microsoft/microsoft-graph-client": "^1.7.0",
-    "@microsoft/teams-js": "^1.4.3",
-    "@nguniversal/express-engine": "^7.0.2",
-    "@nguniversal/module-map-ngfactory-loader": "v7.0.2",
+    "@angular/cdk": "^8.1.3",
+    "@angular/fire": "^5.2.1",
+    "@angular/material": "^8.1.3",
+    "@angular/platform-server": "~8.2.3",
+    "@angular/pwa": "^0.803.0",
+    "@angular/service-worker": "~8.2.3",
+    "@auth0/angular-jwt": "^3.0.0",
+    "@nguniversal/express-engine": "^8.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@ngx-translate/core": "^11.0.1",
-    "@types/bootstrap": "^4.3.0",
-    "@types/express": "^4.16.1",
+    "@types/bootstrap": "^4.3.1",
+    "@types/express": "^4.17.1",
     "@types/firebase": "^3.2.1",
-    "@types/google.analytics": "0.0.39",
     "@types/hammerjs": "^2.0.36",
     "@wapps/jest-google-maps-mock": "0.0.9",
     "bootstrap": "^4.3.1",
-    "core-js": "^2.5.4",
     "express": "^4.15.2",
-    "firebase": "^6.0.4",
+    "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
-    "ngx-infinite-scroll": "^7.1.0",
-    "ngx-perfect-scrollbar": "^7.2.1",
-    "rxjs": "~6.4.0",
+    "ngx-infinite-scroll": "^8.0.0",
+    "ngx-perfect-scrollbar": "^8.0.0",
     "semi-table": "0.0.5",
-    "tslib": "^1.9.0",
+    "@angular/animations": "~8.2.3",
+    "@angular/common": "~8.2.3",
+    "@angular/compiler": "~8.2.3",
+    "@angular/core": "~8.2.3",
+    "@angular/forms": "~8.2.3",
+    "@angular/platform-browser": "~8.2.3",
+    "@angular/platform-browser-dynamic": "~8.2.3",
+    "@angular/router": "~8.2.3",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.1",
-    "@angular/compiler-cli": "~8.0.0",
-    "@angular/language-service": "~8.0.0",
-    "@angularclass/hmr": "^2.1.3",
-    "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@microsoft/microsoft-graph-types": "^1.9.0",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "@speedy/build-angular": "^0.1.2",
-    "@types/ftp": "^0.3.29",
-    "@types/googlemaps": "^3.36.0",
+    "@biesbjerg/ngx-translate-extract": "^3.0.3",
+    "@types/googlemaps": "^3.37.4",
+    "@types/stylelint": "^9.10.1",
+    "husky": "^3.0.4",
+    "mock-browser": "^0.92.14",
+    "stylelint": "^10.1.0",
+    "ts-loader": "^6.0.4",
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-cli": "^3.3.7",
+    "@angular-devkit/build-angular": "~0.803.0",
+    "@angular/cli": "~8.3.0",
+    "@angular/compiler-cli": "~8.2.3",
+    "@angular/language-service": "~8.2.3",
+    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.9.5",
-    "@types/stylelint": "^9.10.0",
     "codelyzer": "^5.0.0",
-    "commander": "^2.19.0",
-    "ftp": "^0.3.10",
-    "gulp": "^4.0.0",
-    "gulp-remove-logging": "^1.2.0",
-    "husky": "^2.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -90,15 +81,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "mock-browser": "^0.92.14",
     "protractor": "~5.4.0",
-    "stylelint": "^10.1.0",
-    "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.1.0"
+    "typescript": "~3.5.3"
   },
   "husky": {
     "hooks": {
