--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express": "^4.15.2",
     "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
+    "ngx-gravatar": "^8.0.0",
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-perfect-scrollbar": "^8.0.0",
     "rxjs": "~6.4.0",
