add test to login component, refactor form module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,10 @@
     ]
   },
   "include": [
-    "src"
+    "src",
+  ],
+  "exclude": [
+    "src/test/*/**"
   ],
   "angularCompilerOptions": {
     "strictMetadataEmit": false,
