--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "e2e": "ng e2e",
     "start": "ng serve",
     "start:ssr": "node dist/server",
-    "test": "ng test",
+    "test": "ng test --browsers=ChromeHeadless",
     "lint": "npm run lint:ts && npm run lint:style",
     "lint:ts": "ng lint --fix",
     "lint:style": "stylelint './src/**/*.scss' --fix",
@@ -61,23 +61,18 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@biesbjerg/ngx-translate-extract": "^3.0.3",
-    "@types/googlemaps": "^3.37.4",
-    "@types/stylelint": "^9.10.1",
-    "husky": "^3.0.4",
-    "mock-browser": "^0.92.14",
-    "stylelint": "^10.1.0",
-    "ts-loader": "^6.0.4",
-    "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "^3.3.7",
     "@angular-devkit/build-angular": "~0.803.0",
     "@angular/cli": "~8.3.0",
     "@angular/compiler-cli": "~8.2.3",
     "@angular/language-service": "~8.2.3",
-    "@types/node": "~8.9.4",
+    "@biesbjerg/ngx-translate-extract": "^3.0.3",
+    "@types/googlemaps": "^3.37.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.10.59",
+    "@types/stylelint": "^9.10.1",
     "codelyzer": "^5.0.0",
+    "husky": "^3.0.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -85,10 +80,15 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "mock-browser": "^0.92.14",
     "protractor": "~5.4.0",
+    "stylelint": "^10.1.0",
+    "ts-loader": "^6.0.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-cli": "^3.3.7"
   },
   "husky": {
     "hooks": {
