add cache interceptor, refactor interceptors

--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "scripts": {
+    "deploy": "ng build --prod --base-href 'https://ezzabuzaid.github.io/angular-buildozer/'",
+    "test:coverage": "rimraf coverage && npm run test -- --code-coverage",
+    "pre-e2e": "webdriver-manager update --standalone false --gecko false",
+    "docs": "compodoc -p src/tsconfig.app.json -d docs",
+    "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
+    "release:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "extract": "ngx-translate-extract  -i ./src -o ./src/assets/languages/ar.json ./src/assets/languages/en.json --sort --clean --marker _extract",
+    "bundle-report": "npm run build:stats && webpack-bundle-analyzer ./dist/browser/stats-es2015.json",
     "ng": "ng",
     "e2e": "ng e2e",
     "start": "ng serve",
     "start:ssr": "node dist/server",
-    "test": "ng test --browsers=ChromeHeadless",
+    "test": "clear && ng test --browsers=ChromeHeadless",
     "lint": "npm run lint:ts && npm run lint:style",
     "lint:ts": "ng lint --fix",
     "lint:style": "stylelint './src/**/*.scss' --fix",
     "build": "ng build --prod",
     "build:ssr": "npm run build:app-shell && npm run compile:server",
+    "build:stats": "ng build --stats-json",
     "build:app-shell": "ng run buildozer:app-shell:production",
-    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
-    "extract": "ngx-translate-extract  -i ./src -o ./src/assets/languages/ar.json ./src/assets/languages/en.json --sort --clean --marker _extract",
-    "bundle-report": "ng build --prod --stats-json && webpack-bundle-analyzer dist/stats.json",
-    "deploy": "ng build --prod --base-href 'https://ezzabuzaid.github.io/angular-buildozer/'",
-    "test:coverage": "rimraf coverage && npm run test -- --code-coverage",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "docs": "compodoc -p src/tsconfig.app.json -d docs",
-    "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
-    "release:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "dependencies": {
     "@angular/animations": "~8.2.3",
@@ -37,6 +38,7 @@
     "@angular/router": "~8.2.3",
     "@angular/service-worker": "~8.2.3",
     "@auth0/angular-jwt": "^3.0.0",
+    "@ezzabuzaid/document-storage": "^0.1.0",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@ngx-translate/core": "^11.0.1",
