--- a/angular.json
+++ b/angular.json
@@ -33,9 +33,12 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/intl-tel-input/build/css/intlTelInput.min.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/intl-tel-input/build/js/intlTelInput.min.js"
+            ],
             "stylePreprocessorOptions": {
               "includePaths": [
                 "src/assets/scss"
