--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express": "^4.15.2",
     "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
+    "intl-tel-input": "^16.0.8",
     "ng2-completer": "^3.0.2",
     "ng2-smart-table": "^1.5.0",
     "ngx-gravatar": "^8.0.0",
