--- a/package.json
+++ b/package.json
@@ -38,15 +38,14 @@
     "@angular/router": "~8.2.3",
     "@angular/service-worker": "~8.2.3",
     "@auth0/angular-jwt": "^3.0.0",
-    "@ezzabuzaid/document-storage": "^0.1.0",
+    "@ezzabuzaid/document-storage": "^0.2.0",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@ngx-translate/core": "^11.0.1",
     "@types/bootstrap": "^4.3.1",
     "@types/express": "^4.17.1",
-    "@types/firebase": "^3.2.1",
     "@types/hammerjs": "^2.0.36",
-    "@wapps/jest-google-maps-mock": "0.0.9",
+    "jest-google-maps-mock": "1.0.3",
     "bootstrap": "^4.3.1",
     "core-js": "^3.2.1",
     "express": "^4.15.2",
