--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "@types/bootstrap": "^4.3.1",
     "@types/express": "^4.17.1",
     "@types/hammerjs": "^2.0.36",
-    "jest-google-maps-mock": "1.0.3",
     "bootstrap": "^4.3.1",
     "core-js": "^3.2.1",
+    "device-uuid": "^1.0.4",
     "express": "^4.15.2",
     "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
     "intl-tel-input": "^16.0.8",
+    "jest-google-maps-mock": "1.0.3",
     "ng2-completer": "^3.0.2",
     "ng2-smart-table": "^1.5.0",
     "ngx-gravatar": "^8.0.0",
