--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/node": "^8.10.59",
     "@types/stylelint": "^9.10.1",
     "codelyzer": "^5.0.0",
+    "domino": "^2.1.4",
     "husky": "^3.0.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
