--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -67,6 +68,10 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
                 }
               ],
               "serviceWorker": true,
@@ -93,7 +98,8 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
-              ]
+              ],
+              "optimization": true
             }
           }
         },
@@ -179,5 +185,8 @@
       }
     }
   },
-  "defaultProject": "buildozer"
+  "defaultProject": "buildozer",
+  "cli": {
+    "analytics": "c0863d07-34f4-4b95-b876-0ab1036d2c37"
+  }
 }
