--- a/package.json
+++ b/package.json
@@ -23,22 +23,21 @@
     "compile:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "dependencies": {
-    "@angular/animations": "~8.2.3",
+    "@angular/animations": "~9.0.0-rc.13",
     "@angular/cdk": "^8.1.3",
-    "@angular/common": "~8.2.3",
-    "@angular/compiler": "~8.2.3",
-    "@angular/core": "~8.2.3",
+    "@angular/common": "~9.0.0-rc.13",
+    "@angular/compiler": "~9.0.0-rc.13",
+    "@angular/core": "~9.0.0-rc.13",
     "@angular/fire": "^5.2.1",
-    "@angular/forms": "~8.2.3",
+    "@angular/forms": "~9.0.0-rc.13",
     "@angular/material": "^8.1.3",
-    "@angular/platform-browser": "~8.2.3",
-    "@angular/platform-browser-dynamic": "~8.2.3",
-    "@angular/platform-server": "~8.2.3",
-    "@angular/pwa": "^0.803.0",
-    "@angular/router": "~8.2.3",
-    "@angular/service-worker": "~8.2.3",
+    "@angular/platform-browser": "~9.0.0-rc.13",
+    "@angular/platform-browser-dynamic": "~9.0.0-rc.13",
+    "@angular/platform-server": "~9.0.0-rc.13",
+    "@angular/router": "~9.0.0-rc.13",
+    "@angular/service-worker": "~9.0.0-rc.13",
     "@auth0/angular-jwt": "^3.0.0",
-    "@ezzabuzaid/document-storage": "^0.2.0",
+    "@ezzabuzaid/document-storage": "^0.2.1",
     "@nguniversal/express-engine": "^8.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@ngx-translate/core": "^11.0.1",
@@ -52,29 +51,26 @@
     "firebase": "^6.4.2",
     "hammerjs": "^2.0.8",
     "intl-tel-input": "^16.0.8",
-    "jest-google-maps-mock": "1.0.3",
-    "ng2-completer": "^3.0.2",
-    "ng2-smart-table": "^1.5.0",
     "ngx-gravatar": "^8.0.0",
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-perfect-scrollbar": "^8.0.0",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.5.4",
     "semi-table": "0.0.5",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.21",
-    "@angular/cli": "~8.3.0",
-    "@angular/compiler-cli": "~8.2.3",
-    "@angular/language-service": "~8.2.3",
+    "@angular-devkit/build-angular": "~0.900.0-rc.12",
+    "@angular/cli": "~9.0.0-rc.12",
+    "@angular/compiler-cli": "~9.0.0-rc.13",
+    "@angular/language-service": "~9.0.0-rc.13",
     "@biesbjerg/ngx-translate-extract": "^3.0.3",
     "@types/googlemaps": "^3.37.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^8.10.59",
+    "@types/node": "^12.11.1",
     "@types/stylelint": "^9.10.1",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.1.2",
     "domino": "^2.1.4",
     "husky": "^3.0.4",
     "jasmine-core": "~3.4.0",
@@ -90,13 +86,13 @@
     "ts-loader": "^6.0.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
+    "typescript": "~3.7.5",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.7"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run build:ssr && git add ."
+      "pre-commit": "npm run lint && npm run build && git add ."
     }
   },
   "name": "angular-buildozer",
