--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/bootstrap": "^4.3.1",
     "@types/express": "^4.17.1",
     "@types/hammerjs": "^2.0.36",
+    "@types/socket.io-client": "^1.4.32",
     "bootstrap": "^4.3.1",
     "core-js": "^3.2.1",
     "device-uuid": "^1.0.4",
@@ -56,6 +57,7 @@
     "ngx-perfect-scrollbar": "^8.0.0",
     "rxjs": "~6.5.4",
     "semi-table": "0.0.5",
+    "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
