--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
     "lint:ts": "ng lint --fix",
     "lint:style": "stylelint './src/**/*.scss' --fix",
     "build": "ng build --prod",
-    "build:stats": "ng build --stats-json",
-    "build:app-shell": "ng run buildozer:app-shell:production",
-    "dev:ssr": "ng run buildozer:serve-ssr",
-    "serve:ssr": "node dist/server/main.js",
-    "build:ssr": "npm run build && ng run buildozer:server:production && npm run webpack:server",
+    "build:ssr": "npm run build && ng run buildozer:server:production",
     "prerender": "ng run buildozer:prerender",
-    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
+    "dev:ssr": "ng run buildozer:serve-ssr",
+    "serve:ssr": "node dist/server/main.js"
   },
   "dependencies": {
     "@angular/animations": "~9.0.0",
@@ -40,11 +37,8 @@
     "@auth0/angular-jwt": "^4.0.0",
     "@ezzabuzaid/document-storage": "^0.3.1",
     "@nguniversal/express-engine": "^9.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "@ngx-translate/core": "^12.0.0",
-    "@types/bootstrap": "^4.3.1",
-    "@types/express": "^4.17.1",
-    "@types/hammerjs": "^2.0.36",
-    "@types/socket.io-client": "^1.4.32",
     "bootstrap": "^4.3.1",
     "core-js": "^3.2.1",
     "device-uuid": "^1.0.4",
@@ -53,7 +47,6 @@
     "intl-tel-input": "^16.0.8",
     "ngx-gravatar": "^8.0.0",
     "ngx-infinite-scroll": "^8.0.0",
-    "ngx-perfect-scrollbar": "^9.0.0",
     "rxjs": "~6.5.4",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
@@ -66,6 +59,8 @@
     "@angular/language-service": "~9.0.0",
     "@biesbjerg/ngx-translate-extract": "^4.2.0",
     "@nguniversal/builders": "^9.0.0",
+    "@types/bootstrap": "^4.3.1",
+    "@types/socket.io-client": "^1.4.32",
     "@types/express": "^4.17.0",
     "@types/googlemaps": "^3.37.4",
     "@types/jasmine": "~3.5.3",
