--- a/angular.json
+++ b/angular.json
@@ -106,9 +106,30 @@
         "app-shell": {
           "builder": "@angular-devkit/build-angular:app-shell",
           "options": {
-            "browserTarget": "buildozer:build",
-            "serverTarget": "buildozer:server",
+            "browserTarget": "buildozer:build:production",
+            "serverTarget": "buildozer:server:production",
             "route": "shell"
+          },
+          "configurations": {}
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "browserTarget": "buildozer:build:production",
+            "serverTarget": "buildozer:server:production",
+            "routes": [
+              "/portal"
+            ]
+          },
+          "configurations": {
+            "production": {}
+          }
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "options": {
+            "browserTarget": "buildozer:build",
+            "serverTarget": "buildozer:server"
           },
           "configurations": {
             "production": {
@@ -180,32 +201,6 @@
             "production": {
               "devServerTarget": "buildozer:serve:production"
             }
-          }
-        },
-        "serve-ssr": {
-          "builder": "@nguniversal/builders:ssr-dev-server",
-          "options": {
-            "browserTarget": "buildozer:build",
-            "serverTarget": "buildozer:server"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "buildozer:build:production",
-              "serverTarget": "buildozer:server:production"
-            }
-          }
-        },
-        "prerender": {
-          "builder": "@nguniversal/builders:prerender",
-          "options": {
-            "browserTarget": "buildozer:build:production",
-            "serverTarget": "buildozer:server:production",
-            "routes": [
-              "/portal"
-            ]
-          },
-          "configurations": {
-            "production": {}
           }
         }
       }
