logout the user if the auth in session context

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,6 +59,7 @@
     "strictTemplates": true,
     "strictInjectionParameters": true,
     "trace": true,
+    "debug": true
   },
   "files": [
     "server.ts"
