--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "e2e": "ng e2e",
     "start": "ng serve -o",
     "serve:ssr": "node dist/server/main.js",
-    "test": "clear && ng test --browsers=ChromeHeadless",
+    "test": "clear && ng test",
     "test:coverage": "rm -rf ./coverage && ng test --codeCoverage --watch false",
     "lint": "ng lint --fix && stylelint './src/**/*.scss' --fix",
     "build": "ng build --prod",
@@ -35,7 +35,7 @@
     "@angular/service-worker": "~9.0.0",
     "@auth0/angular-jwt": "^4.0.0",
     "@ctrl/ngx-emoji-mart": "^2.0.0",
-    "@ezzabuzaid/document-storage": "^0.3.1",
+    "@ezzabuzaid/document-storage": "^0.4.0",
     "@nguniversal/express-engine": "^9.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "@ngx-translate/core": "^12.0.0",
