--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@angular/service-worker": "~9.0.0",
     "@auth0/angular-jwt": "^4.0.0",
     "@ctrl/ngx-emoji-mart": "^2.0.0",
-    "@ezzabuzaid/document-storage": "^0.4.0",
+    "@ezzabuzaid/document-storage": "^0.4.6",
     "@nguniversal/express-engine": "^9.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "@ngx-translate/core": "^12.0.0",
@@ -44,6 +44,7 @@
     "device-uuid": "^1.0.4",
     "express": "^4.15.2",
     "firebase": "^7.8.1",
+    "imagesloaded": "^4.1.4",
     "intl-tel-input": "^16.0.8",
     "ngx-gravatar": "^8.0.0",
     "ngx-infinite-scroll": "^8.0.0",
@@ -58,15 +59,15 @@
     "@angular/cli": "~9.0.1",
     "@angular/compiler-cli": "~9.0.0",
     "@angular/language-service": "~9.0.0",
-    "@biesbjerg/ngx-translate-extract": "^4.2.0",
+    "@biesbjerg/ngx-translate-extract": "^6.0.0",
     "@nguniversal/builders": "^9.0.0",
     "@types/bootstrap": "^4.3.1",
-    "@types/socket.io-client": "^1.4.32",
     "@types/express": "^4.17.0",
     "@types/googlemaps": "^3.37.4",
     "@types/jasmine": "~3.5.3",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^13.7.0",
+    "@types/socket.io-client": "^1.4.32",
     "@types/stylelint": "^9.10.1",
     "codelyzer": "^5.1.2",
     "domino": "^2.1.4",
@@ -85,7 +86,7 @@
     "ts-node": "~8.6.2",
     "tslint": "~6.0.0",
     "typescript": "~3.7.5",
-    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.7"
   },
   "husky": {
