--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,4 +21,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Push to Heroku
-      run: git push -f https://heroku:${{ secrets.HEROKU_API_TOKEN }}@git.heroku.com/angular-buildozer.git HEAD
+      run: git push -f https://heroku:${{ secrets.HEROKU_API_TOKEN }}@git.heroku.com/angular-buildozer.git master
