--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,5 +15,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Push to Heroku
-        run: git fetch --all --unshallow | git push -f https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git HEAD:master
+      - name: Deploy to Heroku
+        uses: AkhileshNS/heroku-deploy@v3.0.4
+        with:
+          # This will be used for authentication. You can find it in your heroku homepage account settings
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_email: ${{secrets.EMAIL}}
+          # The appname to use for deploying/updating
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
