--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     "dev:ssr": "ng run buildozer:serve-ssr"
   },
   "dependencies": {
-    "@angular/animations": "~9.0.0",
+    "@angular/animations": "~9.1.4",
     "@angular/cdk": "^9.0.0",
-    "@angular/common": "~9.0.0",
-    "@angular/compiler": "~9.0.0",
-    "@angular/core": "~9.0.0",
+    "@angular/common": "~9.1.4",
+    "@angular/compiler": "~9.1.4",
+    "@angular/core": "~9.1.4",
     "@angular/fire": "^5.4.2",
-    "@angular/forms": "~9.0.0",
+    "@angular/forms": "~9.1.4",
     "@angular/material": "^9.0.0",
-    "@angular/platform-browser": "~9.0.0",
-    "@angular/platform-browser-dynamic": "~9.0.0",
-    "@angular/platform-server": "~9.0.0",
-    "@angular/router": "~9.0.0",
-    "@angular/service-worker": "~9.0.0",
+    "@angular/platform-browser": "~9.1.4",
+    "@angular/platform-browser-dynamic": "~9.1.4",
+    "@angular/platform-server": "~9.1.4",
+    "@angular/router": "~9.1.4",
+    "@angular/service-worker": "~9.1.4",
     "@auth0/angular-jwt": "^4.0.0",
     "@ctrl/ngx-emoji-mart": "^2.0.0",
     "@ezzabuzaid/document-storage": "^0.4.6",
@@ -55,10 +55,10 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.1",
-    "@angular/cli": "~9.0.1",
-    "@angular/compiler-cli": "~9.0.0",
-    "@angular/language-service": "~9.0.0",
+    "@angular-devkit/build-angular": "~0.901.4",
+    "@angular/cli": "~9.1.4",
+    "@angular/compiler-cli": "~9.1.4",
+    "@angular/language-service": "~9.1.4",
     "@biesbjerg/ngx-translate-extract": "^6.0.0",
     "@nguniversal/builders": "^9.0.0",
     "@types/bootstrap": "^4.3.1",
@@ -85,7 +85,7 @@
     "ts-loader": "^6.0.4",
     "ts-node": "~8.6.2",
     "tslint": "^6.1.1",
-    "typescript": "~3.7.5",
+    "typescript": "^3.7.5",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.7"
   },
