install simple-peer

--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,8 @@
             ],
             "scripts": [
               "node_modules/intl-tel-input/build/js/intlTelInput.min.js",
-              "node_modules/intl-tel-input/build/js/utils.js"
+              "node_modules/intl-tel-input/build/js/utils.js",
+              "node_modules/simple-peer/simplepeer.min.js"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
