--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,26 +1,27 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "ng serve",
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:4200",
-            "port": 4200,
-            "webRoot": "${workspaceFolder}"
+            "preLaunchTask": "npm: start",
+            "url": "http://localhost:4200/#",
+            "webRoot": "${workspaceFolder}",
+            "sourceMapPathOverrides": {
+                "webpack:/*": "${webRoot}/*",
+                "/./*": "${webRoot}/*",
+                "/src/*": "${webRoot}/*",
+                "/*": "*",
+                "/./~/*": "${webRoot}/node_modules/*"
+            }
         },
         {
+            "name": "ng test",
             "type": "chrome",
             "request": "launch",
-            "name": "Debug test",
             "url": "http://localhost:9876/debug.html",
             "webRoot": "${workspaceFolder}",
-            "runtimeArgs": [
-                "--headless"
-            ],
             "sourceMaps": true,
             "sourceMapPathOverrides": {
                 "webpack:/*": "${webRoot}/*",
@@ -28,8 +29,17 @@
                 "/src/*": "${webRoot}/*",
                 "/*": "*",
                 "/./~/*": "${webRoot}/node_modules/*"
-            },
-            "port": 9223
+            }
+        },
+        {
+            "name": "ng e2e",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceFolder}/node_modules/protractor/bin/protractor",
+            "protocol": "inspector",
+            "args": [
+                "${workspaceFolder}/e2e/protractor.conf.js"
+            ]
         }
     ]
 }
