--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nguniversal/express-engine": "^9.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "@ngx-translate/core": "^12.0.0",
+    "@types/simple-peer": "^9.6.0",
     "bootstrap": "^4.3.1",
     "core-js": "^3.2.1",
     "device-uuid": "^1.0.4",
@@ -50,6 +51,7 @@
     "ngx-infinite-scroll": "^8.0.0",
     "ngx-timeago": "^1.0.4",
     "rxjs": "~6.5.4",
+    "simple-peer": "^9.7.2",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
