--- a/angular.json
+++ b/angular.json
@@ -134,7 +134,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "buildozer:build"
+            "browserTarget": "buildozer:build",
+            "aot": true
           },
           "configurations": {
             "production": {
