--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@angular/service-worker": "~9.1.4",
     "@auth0/angular-jwt": "^4.0.0",
     "@ezzabuzaid/document-storage": "^0.4.6",
-    "@ezzabuzaid/ngx-request-options": "0.0.5",
+    "@ezzabuzaid/ngx-request-options": "0.0.7",
     "@joeattardi/emoji-button": "^2.12.1",
     "@nguniversal/express-engine": "^9.0.0",
     "@ngx-translate/core": "^12.0.0",
@@ -69,21 +69,20 @@
     "@types/stylelint": "^9.10.1",
     "codelyzer": "^5.1.2",
     "domino": "^2.1.4",
-    "eslint": "^6.8.0",
     "husky": "^4.2.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.0.9",
+    "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine": "~3.1.0",
     "karma-jasmine-html-reporter": "^1.5.2",
     "mock-browser": "^0.92.14",
-    "protractor": "^7.0.0",
+    "protractor": "~5.4.0",
     "stylelint": "^13.1.0",
     "ts-loader": "^6.0.4",
     "ts-node": "~8.6.2",
-    "tslint": "^6.1.2",
+    "tslint": "^6.1.1",
     "typescript": "^3.7.5",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.7"
