use ngx-form-factory

--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "preserveSymlinks": true,
             "aot": true,
             "outputPath": "dist/browser",
             "index": "src/index.html",
