update to angular 10

--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "dev:ssr": "ng run buildozer:serve-ssr"
   },
   "dependencies": {
-    "@angular/animations": "~9.1.4",
+    "@angular/animations": "~10.0.5",
     "@angular/cdk": "^9.0.0",
-    "@angular/common": "~9.1.4",
-    "@angular/compiler": "~9.1.4",
-    "@angular/core": "~9.1.4",
-    "@angular/forms": "~9.1.4",
+    "@angular/common": "~10.0.5",
+    "@angular/compiler": "~10.0.5",
+    "@angular/core": "~10.0.5",
+    "@angular/forms": "~10.0.5",
     "@angular/material": "^9.0.0",
-    "@angular/platform-browser": "~9.1.4",
-    "@angular/platform-browser-dynamic": "~9.1.4",
-    "@angular/platform-server": "~9.1.4",
-    "@angular/router": "~9.1.4",
-    "@angular/service-worker": "~9.1.4",
+    "@angular/platform-browser": "~10.0.5",
+    "@angular/platform-browser-dynamic": "~10.0.5",
+    "@angular/platform-server": "~10.0.5",
+    "@angular/router": "~10.0.5",
+    "@angular/service-worker": "~10.0.5",
     "@auth0/angular-jwt": "^4.0.0",
     "@ezzabuzaid/document-storage": "^0.4.6",
     "@ezzabuzaid/ngx-form-factory": "0.0.17",
@@ -50,14 +50,14 @@
     "rxjs": "~6.5.4",
     "simple-peer": "^9.7.2",
     "socket.io-client": "^2.3.0",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.4",
-    "@angular/cli": "~9.1.4",
-    "@angular/compiler-cli": "~9.1.4",
-    "@angular/language-service": "~9.1.4",
+    "@angular-devkit/build-angular": "~0.1000.4",
+    "@angular/cli": "~10.0.4",
+    "@angular/compiler-cli": "~10.0.5",
+    "@angular/language-service": "~10.0.5",
     "@biesbjerg/ngx-translate-extract": "^6.0.0",
     "@nguniversal/builders": "^9.0.0",
     "@types/bootstrap": "^4.3.1",
@@ -68,23 +68,23 @@
     "@types/node": "^13.7.0",
     "@types/socket.io-client": "^1.4.32",
     "@types/stylelint": "^9.10.1",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "domino": "^2.1.4",
     "husky": "^4.2.1",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "~3.1.0",
-    "karma-jasmine-html-reporter": "^1.5.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "mock-browser": "^0.92.14",
-    "protractor": "~5.4.0",
+    "protractor": "~7.0.0",
     "stylelint": "^13.1.0",
     "ts-loader": "^6.0.4",
     "ts-node": "~8.6.2",
-    "tslint": "^6.1.1",
-    "typescript": "^3.7.5",
+    "tslint": "~6.1.0",
+    "typescript": "^3.9.7",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.7"
   },
