--- a/angular.json
+++ b/angular.json
@@ -11,7 +11,7 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss",
-          "spec": true
+          "skipTests": false
         },
         "@schematics/angular:module": {
           "routing": true,
