--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,65 +1,20 @@
+/*
+  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
+  It is not intended to be used to perform a compilation.
+
+  To learn more about this file see: https://angular.io/config/solution-tsconfig.
+*/
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "baseUrl": "src",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
-    "target": "es2015",
-    "removeComments": true,
-    "resolveJsonModule": true,
-    "strict": false,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "suppressImplicitAnyIndexErrors": true,
-    "pretty": true,
-    "strictBindCallApply": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "paths": {
-      "@core/*": [
-        "app/core/*"
-      ],
-      "@shared/*": [
-        "app/shared/*"
-      ],
-      "@widget/*": [
-        "app/widget/*"
-      ],
-      "@partials/*": [
-        "app/partials/*"
-      ],
-      "@layout/*": [
-        "app/layout/*"
-      ],
-      "@environments/*": [
-        "environments/*"
-      ]
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
     },
-    "lib": [
-      "es2018",
-      "dom"
-    ]
-  },
-  "include": [
-    "src",
-  ],
-  "exclude": [
-    "src/test/*/**"
-  ],
-  "angularCompilerOptions": {
-    "strictTemplates": true,
-    "strictInjectionParameters": true,
-    "trace": true,
-    "debug": true
-  },
-  "files": [
-    "server.ts"
+    {
+      "path": "./tsconfig.server.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    }
   ]
 }
