--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@angular/compiler-cli": "~10.0.5",
     "@angular/language-service": "~10.0.5",
     "@biesbjerg/ngx-translate-extract": "^6.0.0",
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
     "@nguniversal/builders": "^9.0.0",
     "@types/bootstrap": "^4.3.1",
     "@types/express": "^4.17.0",
