build: add source map to ssr

--- a/angular.json
+++ b/angular.json
@@ -97,7 +97,7 @@
               }
             ],
             "outputHashing": "media",
-            "sourceMap": false,
+            "sourceMap": true,
             "optimization": false,
             "stylePreprocessorOptions": {
               "includePaths": [
