--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "postinstall": "ngcc && npm run build:ssr",
+    "postinstall": "npm run build:ssr",
     "pre-e2e": "webdriver-manager update --standalone false --gecko false",
     "docs": "compodoc -p src/tsconfig.app.json -d docs",
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
@@ -36,8 +36,8 @@
     "@ezzabuzaid/document-storage": "^0.4.6",
     "@ezzabuzaid/ngx-form-factory": "^0.1.0",
     "@ezzabuzaid/ngx-request-options": "0.0.7",
-    "@joeattardi/emoji-button": "^2.12.1",
     "@nguniversal/express-engine": "^9.0.0",
+    "@joeattardi/emoji-button": "^2.12.1",
     "@ngx-translate/core": "^12.0.0",
     "bootstrap": "^4.5.0",
     "core-js": "^3.2.1",
@@ -57,7 +57,7 @@
     "@angular/compiler-cli": "~10.0.5",
     "@angular/language-service": "~10.0.5",
     "@biesbjerg/ngx-translate-extract": "^6.0.0",
-    "@commitlint/cli": "^9.1.1",
+    "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.1",
     "@nguniversal/builders": "^9.0.0",
     "@types/bootstrap": "^4.3.1",
@@ -69,7 +69,6 @@
     "@types/socket.io-client": "^1.4.32",
     "@types/stylelint": "^9.10.1",
     "codelyzer": "^6.0.0",
-    "domino": "^2.1.4",
     "husky": "^4.2.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -78,7 +77,6 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "mock-browser": "^0.92.14",
     "protractor": "~7.0.0",
     "stylelint": "^13.1.0",
     "ts-loader": "^6.0.4",
