--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,28 +1,31 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "ng serve",
             "type": "chrome",
             "request": "launch",
-            "preLaunchTask": "npm: start",
-            "url": "http://localhost:4200/#",
-            "webRoot": "${workspaceFolder}",
-            "sourceMapPathOverrides": {
-                "webpack:/*": "${webRoot}/*",
-                "/./*": "${webRoot}/*",
-                "/src/*": "${webRoot}/*",
-                "/*": "*",
-                "/./~/*": "${webRoot}/node_modules/*"
-            }
+            "name": "Launch Chrome against localhost",
+            "url": "http://localhost:4200",
+            "webRoot": "${workspaceFolder}"
         },
         {
-            "name": "ng test",
+            "name": "Attach Chrome",
             "type": "chrome",
-            "request": "launch",
-            "url": "http://localhost:9876/debug.html",
+            "request": "attach",
+            "url": "http://localhost:4200/",
             "webRoot": "${workspaceFolder}",
+            "port": 4200
+        },
+        {
+            "name": "Debug tests",
+            "type": "chrome",
+            "request": "attach",
+            "port": 9222,
             "sourceMaps": true,
+            "webRoot": "${workspaceRoot}",
             "sourceMapPathOverrides": {
                 "webpack:/*": "${webRoot}/*",
                 "/./*": "${webRoot}/*",
@@ -30,16 +33,6 @@
                 "/*": "*",
                 "/./~/*": "${webRoot}/node_modules/*"
             }
-        },
-        {
-            "name": "ng e2e",
-            "type": "node",
-            "request": "launch",
-            "program": "${workspaceFolder}/node_modules/protractor/bin/protractor",
-            "protocol": "inspector",
-            "args": [
-                "${workspaceFolder}/e2e/protractor.conf.js"
-            ]
         }
     ]
 }
