--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bundle-report": "npm run build:stats && webpack-bundle-analyzer ./dist/browser/stats-es2015.json",
     "ng": "ng",
     "e2e": "ng e2e",
-    "start": "ng run buildozer:serve-ssr",
+    "start": "ng serve -o",
     "serve:ssr": "node dist/server/main.js",
     "test": "clear && ng test",
     "test:coverage": "rm -rf ./coverage && ng test --codeCoverage --watch false",
