--- a/package.json
+++ b/package.json
@@ -1,121 +1,121 @@
 {
-  "scripts": {
-    "postinstall": "npm run build:ssr",
-    "pre-e2e": "webdriver-manager update --standalone false --gecko false",
-    "docs": "compodoc -p src/tsconfig.app.json -d docs",
-    "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
-    "release:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "extract": "ngx-translate-extract  -i ./src -o ./src/assets/languages/ar.json ./src/assets/languages/en.json --sort --clean --marker _extract",
-    "bundle-report": "npm run build:stats && webpack-bundle-analyzer ./dist/browser/stats-es2015.json",
-    "ng": "ng",
-    "e2e": "ng e2e",
-    "start": "ng serve -o",
-    "serve:ssr": "node dist/server/main.js",
-    "test": "clear && ng test",
-    "test:coverage": "rm -rf ./coverage && ng test --codeCoverage --watch false",
-    "lint": "ng lint --fix && stylelint './src/**/*.scss' --fix",
-    "build": "ng build --prod",
-    "build:ssr": "npm run build && ng run buildozer:server:production",
-    "prerender": "ng run buildozer:prerender",
-    "dev:ssr": "ng run buildozer:serve-ssr"
-  },
-  "dependencies": {
-    "@angular/animations": "~10.0.5",
-    "@angular/cdk": "^10.1.1",
-    "@angular/common": "~10.0.5",
-    "@angular/compiler": "~10.0.5",
-    "@angular/core": "~10.0.5",
-    "@angular/forms": "~10.0.5",
-    "@angular/material": "^10.1.1",
-    "@angular/platform-browser": "~10.0.5",
-    "@angular/platform-browser-dynamic": "~10.0.5",
-    "@angular/platform-server": "~10.0.5",
-    "@angular/router": "~10.0.5",
-    "@angular/service-worker": "~10.0.5",
-    "@auth0/angular-jwt": "^4.0.0",
-    "@ezzabuzaid/document-storage": "^0.4.6",
-    "@ezzabuzaid/ngx-form-factory": "^0.1.0",
-    "@ezzabuzaid/ngx-request-options": "0.0.7",
-    "@nguniversal/express-engine": "^9.0.0",
-    "@joeattardi/emoji-button": "^2.12.1",
-    "@ngx-translate/core": "^12.0.0",
-    "bootstrap": "^4.5.0",
-    "core-js": "^3.2.1",
-    "express": "^4.15.2",
-    "intl-tel-input": "^16.0.8",
-    "ngx-gravatar": "^9.0.1",
-    "ngx-infinite-scroll": "^9.0.0",
-    "ngx-timeago": "^1.0.4",
-    "rxjs": "~6.5.4",
-    "socket.io-client": "^2.3.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.4",
-    "@angular/cli": "~10.0.4",
-    "@angular/compiler-cli": "~10.0.5",
-    "@angular/language-service": "~10.0.5",
-    "@biesbjerg/ngx-translate-extract": "^6.0.0",
-    "@commitlint/cli": "^9.1.2",
-    "@commitlint/config-conventional": "^9.1.1",
-    "@nguniversal/builders": "^9.0.0",
-    "@types/bootstrap": "^4.3.1",
-    "@types/express": "^4.17.0",
-    "@types/googlemaps": "^3.37.4",
-    "@types/jasmine": "~3.5.3",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^13.7.0",
-    "@types/socket.io-client": "^1.4.32",
-    "@types/stylelint": "^9.10.1",
-    "codelyzer": "^6.0.0",
-    "husky": "^4.2.1",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "stylelint": "^13.1.0",
-    "ts-loader": "^6.0.4",
-    "ts-node": "~8.6.2",
-    "tslint": "~6.1.0",
-    "typescript": "^3.9.7",
-    "webpack-bundle-analyzer": "^3.6.1",
-    "webpack-cli": "^3.3.7"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint && npm run build:ssr && git add ."
+    "scripts": {
+        "postinstall": "npm run build:ssr",
+        "pre-e2e": "webdriver-manager update --standalone false --gecko false",
+        "docs": "compodoc -p src/tsconfig.app.json -d docs",
+        "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
+        "release:changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+        "extract": "ngx-translate-extract  -i ./src -o ./src/assets/languages/ar.json ./src/assets/languages/en.json --sort --clean --marker _extract",
+        "bundle-report": "npm run build:stats && webpack-bundle-analyzer ./dist/browser/stats-es2015.json",
+        "ng": "ng",
+        "e2e": "ng e2e",
+        "start": "ng serve -o",
+        "serve:ssr": "node dist/server/main.js",
+        "test": "clear && ng test",
+        "test:coverage": "rm -rf ./coverage && ng test --codeCoverage --watch false",
+        "lint": "ng lint --fix && stylelint './src/**/*.scss' --fix",
+        "build": "ng build --prod",
+        "build:ssr": "npm run build && ng run messenger:server:production",
+        "prerender": "ng run messenger:prerender",
+        "dev:ssr": "ng run messenger:serve-ssr"
+    },
+    "dependencies": {
+        "@angular/animations": "~10.0.5",
+        "@angular/cdk": "^10.1.1",
+        "@angular/common": "~10.0.5",
+        "@angular/compiler": "~10.0.5",
+        "@angular/core": "~10.0.5",
+        "@angular/forms": "~10.0.5",
+        "@angular/material": "^10.1.1",
+        "@angular/platform-browser": "~10.0.5",
+        "@angular/platform-browser-dynamic": "~10.0.5",
+        "@angular/platform-server": "~10.0.5",
+        "@angular/router": "~10.0.5",
+        "@angular/service-worker": "~10.0.5",
+        "@auth0/angular-jwt": "^4.0.0",
+        "@ezzabuzaid/document-storage": "^0.4.6",
+        "@ezzabuzaid/ngx-form-factory": "^0.1.0",
+        "@ezzabuzaid/ngx-request-options": "0.0.7",
+        "@nguniversal/express-engine": "^9.0.0",
+        "@joeattardi/emoji-button": "^2.12.1",
+        "@ngx-translate/core": "^12.0.0",
+        "bootstrap": "^4.5.0",
+        "core-js": "^3.2.1",
+        "express": "^4.15.2",
+        "intl-tel-input": "^16.0.8",
+        "ngx-gravatar": "^9.0.1",
+        "ngx-infinite-scroll": "^9.0.0",
+        "ngx-timeago": "^1.0.4",
+        "rxjs": "~6.5.4",
+        "socket.io-client": "^2.3.0",
+        "tslib": "^2.0.0",
+        "zone.js": "~0.10.2"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1000.4",
+        "@angular/cli": "~10.0.4",
+        "@angular/compiler-cli": "~10.0.5",
+        "@angular/language-service": "~10.0.5",
+        "@biesbjerg/ngx-translate-extract": "^6.0.0",
+        "@commitlint/cli": "^9.1.2",
+        "@commitlint/config-conventional": "^9.1.1",
+        "@nguniversal/builders": "^9.0.0",
+        "@types/bootstrap": "^4.3.1",
+        "@types/express": "^4.17.0",
+        "@types/googlemaps": "^3.37.4",
+        "@types/jasmine": "~3.5.3",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "^13.7.0",
+        "@types/socket.io-client": "^1.4.32",
+        "@types/stylelint": "^9.10.1",
+        "codelyzer": "^6.0.0",
+        "husky": "^4.2.1",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~5.0.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
+        "karma-jasmine": "~3.3.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "protractor": "~7.0.0",
+        "stylelint": "^13.1.0",
+        "ts-loader": "^6.0.4",
+        "ts-node": "~8.6.2",
+        "tslint": "~6.1.0",
+        "typescript": "^3.9.7",
+        "webpack-bundle-analyzer": "^3.6.1",
+        "webpack-cli": "^3.3.7"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint && npm run build:ssr && git add ."
+        }
+    },
+    "name": "messenger",
+    "bugs": {
+        "email": "ezzabuzaid@hotmail.com",
+        "url": "https://github.com/ezzabuzaid/messenger/issues"
+    },
+    "version": "0.0.0",
+    "description": "Boilerplate for Angular project",
+    "keywords": [
+        "Angular",
+        "Boilerplate",
+        "Angular boilerplate",
+        "Angular structure",
+        "Seed project",
+        "Angular seed"
+    ],
+    "homepage": "https://github.com/ezzabuzaid/messenger",
+    "author": {
+        "name": "ezzabuzaid",
+        "email": "ezzabuzaid@hotmail.com",
+        "url": "https://ezzabuzaid.com"
+    },
+    "repository": "github:ezzabuzaid/messenger",
+    "private": true,
+    "license": "MIT",
+    "engines": {
+        "node": "12.0.0"
     }
-  },
-  "name": "angular-buildozer",
-  "bugs": {
-    "email": "ezzabuzaid@hotmail.com",
-    "url": "https://github.com/ezzabuzaid/angular-buildozer/issues"
-  },
-  "version": "0.0.0",
-  "description": "Boilerplate for Angular project",
-  "keywords": [
-    "Angular",
-    "Boilerplate",
-    "Angular boilerplate",
-    "Angular structure",
-    "Seed project",
-    "Angular seed"
-  ],
-  "homepage": "https://github.com/ezzabuzaid/angular-buildozer",
-  "author": {
-    "name": "ezzabuzaid",
-    "email": "ezzabuzaid@hotmail.com",
-    "url": "https://ezzabuzaid.com"
-  },
-  "repository": "github:ezzabuzaid/angular-buildozer",
-  "private": true,
-  "license": "MIT",
-  "engines": {
-    "node": "12.0.0"
-  }
 }
